--- a/.prettier/.prettierrc.json
+++ b/.prettier/.prettierrc.json
@@ -1,15 +1,15 @@
-# .prettierrc or .prettierrc.yaml
-trailingComma: "es5"
-tabWidth: 2
-semi: false
-singleQuote: true
-arrowParens: "avoid"
-printWidth: 80
-endOfLine: "auto"
-jsxSingleQuote: false
-jsxBracketSameLine: true
-bracketSpacing: true
-bracketSameLine: false
-requirePragma: false
-insertPragma: false
-proseWrap: "preserve"
+// .prettierrc or .prettierrc.yaml
+{
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": false,
+  "singleQuote": true,
+  "arrowParens": "avoid",
+  "endOfLine": "auto",
+  "jsxSingleQuote": false,
+  "jsxBracketSameLine": true,
+  "bracketSameLine": false,
+  "requirePragma": false,
+  "insertPragma": false,
+  "proseWrap": "preserve"
+}
